Fix off-screen bugs, modify philosophy statement, add instagram takeover section

--- a/home/home.css
+++ b/home/home.css
@@ -102,23 +102,15 @@ ul li a:hover {
 
 .our-philosophy {
   margin-left: auto;
-  margin-right: auto
+  margin-right: auto;
   text-align: center;
-  margin-bottom: 100px;
   width: 80%;
+  margin-bottom: -70px;
 }
 
-.left {
-  display: inline-block;
-  width: 40%;
-  text-align: left;
-}
-
-.right {
-  display: inline-block;
-  width: 40%;
-  vertical-align: top;
-  margin-top: -10px;
+mark {
+    background: linear-gradient(180deg, #fff 50%, #fce3ba 50%);
+    color: #36303b;
 }
 
 h3 {
@@ -126,40 +118,45 @@ h3 {
   font-size: 35px;
   line-height: 45px;
   color: #8E57F0;
-  text-align: left;
 }
 
 p {
   font-family: 'Sofia Medium';
   font-size: 20px;
-  color: #4B5161;
+  color: #36303b;
   line-height: 30px;
 }
 
 
 /*OPPORTUNITIES*/
+
 .curly-images::before{
-	position: relative;
-	top: 70px;
-	content: url("opportunities-frontcover.png") ;
-	margin: 0px;
-	padding: 0px;
+	content: "";
+ 	background-image:url("opportunities-frontcover.png");
+ 	background-size: 100% 100%;
+ 	display: inline-block;
+ 	height: 30%;
+ 	width:100%;
+ 	position:relative;
+ 	top: 70px;
 }
 .curly-images::after{
-	position: relative;
-
-	content: url("opportunities-backcover.png") ;
-	margin: 0px;
-	padding: 0px;
+	content: "";
+ 	background-image:url("opportunities-backcover.png");
+ 	background-size: 100% 100%;
+ 	display: inline-block;
+ 	height: 7%;
+ 	width:100%;
+ 	position:relative;
 }
 
 #opportunities {
 	padding: 50px 135px 50px 135px;
 	background-image: url("opportunities-bkg.png");
 	background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  	background-position: center;
+ 	background-repeat: no-repeat;
+ 	background-size: cover;
 	background-repeat: no-repeat;
 	background-size:cover;
 	font-family: "Sofia Medium";
@@ -227,8 +224,9 @@ p {
 }
 
 #magazines{
-	padding: 5px 135px 200px 135px;
+	padding: 5px 135px 100px 135px;
 }
+
 #magazines h2{
 	font-size: 3.3rem;
 	font-family: "Sofia Medium";
@@ -270,7 +268,8 @@ p {
 }
 
 #services {
-  padding: 200px 0px 0px 0px;
+  padding: 250px 0px 0px 0px;
+  top: 70px;
   background-image: url("ourservices-background.png");
   background-repeat: no-repeat;
   background-size:cover;
@@ -301,12 +300,30 @@ p {
 
 #timeline {
   text-align: center;
-  margin-bottom: 100px;
+  margin-bottom: 60px;
+}
+
+#takeovers {
+  text-align: center;
+  margin-top: -45px;
+  margin-bottom: 250px;
 }
 
 @media only screen and (max-width: 600px) {
   #services p {
     width: 70%;
+  }
+
+  .left {
+
+  }
+
+  .right {
+
+  }
+
+  #our-philosophy h3 {
+  	  text-align: center;
   }
 }
 
@@ -314,6 +331,24 @@ p {
   #services p {
     width: 30%;
   }
+
+  .left {
+  	display: inline-block;
+  	width: 40%;
+  	text-align: left;
+  }
+
+  .right {
+  	display: inline-block;
+	width: 40%;
+	vertical-align: top;
+	margin-top: -10px;
+  }
+
+  #our-philosophy h3 {
+  	text-align: left;
+  }
+
 }
 
 footer{
